<resources>
    <string name="app_name">Calcula Percurso e Tempo - GPS</string>
    <string name="action_settings">Settings</string>
    <string name="btn_grant_gps">Grant GPS permission</string>
    <string name="btn_activate">Activate GPS</string>
    <string name="btn_deactivate">Deactivate GPS</string>
    <string name="btn_start">Start Route</string>
    <string name="btn_finish">Finish Route</string>
    <string name="travelled_distance">Travelled\nDistance:</string>
    <string name="past_time">Past Time:</string>
    <string name="search">What do you want to find?</string>
    <string name="uri_map">geo:%f, %f?q=%s</string>
    <string name="active_gps">The GPS is already active</string>
    <string name="no_gps_no_app">You need to enable GPS to use the app.</string>
    <string name="gps_on">The GPS is on</string>
    <string name="gps_already_off">The GPS is already turned off.</string>
    <string name="gps_disabled">The GPS is disabled.</string>
    <string name="permission_already_granted">The permission for the GPS is already granted.</string>
    <string name="permission_granted">GPS permission granted.</string>
    <string name="distance">%.2f m</string>
</resources>
